# arfarius

./: .gitignore  Arfarius.icns  Arfarius.plist  Arfarius.pro  CMakeLists.txt  Makefile  README.md  application.cpp  application.h  arfarius.sublime-project  arfariusapplication.cpp  arfariusapplication.h  assets.qrc  avcondition.cpp  avcondition.h  avconf.h  avexception.h  avfile.cpp  avfile.h  avhistogram.cpp  avhistogram.h  avmutex.cpp  avmutex.h  avobject.cpp  avring.cpp  avring.h  avspectrogram.cpp  avspectrogram.h  avspectrum.cpp  avspectrum.h  avsplitter.cpp  avthread.cpp  avthread.h  build_mac.sh  collection.cpp  collection.h  histogramwidget.cpp  histogramwidget.h  macmediakeys.h  macmediakeys.mm  (+27 more)
QtAwesome/: QtAwesome.cpp  QtAwesome.h
images/: arfarius.psd  next.psd  pause.psd  play.psd  prev.psd  stop.psd  wmp.psd
src/: arfariusapplication.cpp  arfariusapplication.h  avconf.h  avexception.h  avfile.cpp  avfile.h  avhistogram.cpp  avhistogram.h  avmutex.cpp  avmutex.h  avobject.cpp  avobject.h  avspectrum.cpp  avspectrum.h  avsplitter.cpp  avsplitter.h  histogramwidget.cpp  histogramwidget.h  macmediakeys.h  macmediakeys.mm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_ui.h  memring.h  player.cpp  player.h  playlistitem.cpp  playlistitem.h  playlistmodel.cpp  playlistmodel.h  playlistview.cpp  playlistview.h  qcoreaudio.cpp  qcoreaudio.h
